2007-09-03  Bill Clementson  <billclem@gmail.com> 

	* src/distel.erl: Replaced "who calls" (C-c C-d w) logic (all ~250
	lines of it) with a single call to xref:q/2. (Patch from Matthias
	Radestock)

2007-07-20  Mats Cronqvist  <locmacr@mwlx084>

	* src/distel.erl (guess_source_file): added <beamfiledir>../src/*
	to list of directories in which to search for erl files.
	search dirs are now:
	the one specified in the beamfile (the 'source' field in module_info(compile))
	<beamfiledir>
        <beamfiledir>../src
	<beamfiledir>../src/*
	<beamfiledir>../esrc
	<beamfiledir>../erl
	
2007-07-05  Bill Clementson  <billclem@gmail.com>

	* elisp/erl-service.el (erl-nodename-history, erl-choose-nodename): 
	Added node name default value and history. 
	
	* elisp/erl-service.el (erl-find-mod): Deleted function erl-find-mod
	as its functionality has been subsumed by erl-find-source-under-point.
	
2007-07-05  Mats Cronqvist  <mats dot cronqvist at gmail dot youguess>

	* src/distel.erl: rewrote src_from_beam/1 just because the old one
	was ugly.

2007-07-04  Bill Clementson  <billclem@gmail.com>

	* elisp/erl-service.el (erl-find-source): Stop prompting for node name 
	when erl-find-source is called with a prefix arg (earlier change in 
	erl-target-node also affected erl-find-source).
	
2007-07-02  Bill Clementson  <billclem@gmail.com> & Matthias Radestock

	* elisp/erl-service.el (erl-ping): New function erl-ping checks to see
	whether it is possible to communicate with a node.
	
	* elisp/erl-service.el (maybe-select-db-rebuild, erl-fdoc-apropos, 
	erl-fdoc-describe): New function maybe-select-db-rebuild handles prefix
	arg prompting for fdoc commands that might require a rebuild of the 
	fdoc db.
	
	* elisp/erl-service.el (erl-target-node): Force node selection if no 
	such node has been choosen yet, or when invoked with a prefix argument.

	* elisp/distel.el (distel-keys): Added "C-c C-d g" key binding for 
	ner erl-ping command.
